enh: improve Go import extraction and enable relevant imports tests